continue to improve. Organized the processing of the input stream and added some tests for it